src/objects/Opp_Stage_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldListAdding__c</fullName>
        <label>FieldListAdding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldList__c</fullName>
        <label>FieldList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldSetName__c</fullName>
        <label>FieldSetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSetsForOneStage__c</fullName>
        <label>FieldSetsForOneStage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opp Stage Mapping</label>
    <pluralLabel>Opp Stage Mappings</pluralLabel>
</CustomObject>